<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/room_header">

        <EditTextPreference
            app:key="roomId"
            app:title="@string/room_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="peerId"
            app:title="@string/peer_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="displayName"
            app:title="@string/display_name"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="forceTcp"
            app:title="@string/force_tcp" />

        <SwitchPreferenceCompat
            app:key="forceH264"
            app:title="@string/force_h264" />

        <SwitchPreferenceCompat
            app:key="forceVP9"
            app:title="@string/force_vp9" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="produce"
            app:title="@string/produce" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="consume"
            app:title="@string/consume" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/device_header">

        <ListPreference
            app:defaultValue="front"
            app:entries="@array/camera_entries"
            app:entryValues="@array/camera_values"
            app:key="camera"
            app:title="@string/camera"
            app:useSimpleSummaryProvider="true" />

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>
